--- a/components/LuofuStyle/animate.css
+++ b/components/LuofuStyle/animate.css
@@ -25,3 +25,39 @@
   animation-timing-function: ease-out;
   animation-duration: 1s;
 }
+
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInLeft {
+  animation-name: fadeInLeft;
+  animation-timing-function: ease-out;
+  animation-duration: .5s;
+}
+
+@keyframes fadeOutRight {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+}
+
+.fadeOutRight {
+  animation-name: fadeOutRight;
+  animation-timing-function: ease-out;
+  animation-duration: 1s;
+}
